<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="net.jpalayoor.moneytracker.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_monthly"
        android:name="net.jpalayoor.moneytracker.ui.monthly.MonthlyFragment"
        android:label="@string/title_monthly"
        tools:layout="@layout/fragment_monthly">
        <action
            android:id="@+id/action_monthly_to_monthDetail"
            app:destination="@id/monthDetailFragment"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="net.jpalayoor.moneytracker.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settings_to_about"
            app:destination="@id/aboutFragment"/>
    </fragment>

    <fragment
        android:id="@+id/monthDetailFragment"
        android:name="net.jpalayoor.moneytracker.ui.monthly.MonthDetailFragment"
        android:label="Month Detail">
        <argument
            android:name="month"
            app:argType="string"
            android:defaultValue=""/>
    </fragment>

    <fragment
        android:id="@+id/aboutFragment"
        android:name="net.jpalayoor.moneytracker.ui.settings.AboutFragment"
        android:label="About"/>

</navigation>